# instamaps

./: .gitignore  README.md  docker-compose.yml  merged.md  script.js
backend/: postgresql.Dockerfile
backend/init-scripts/: 01-init-postgis.sh
backend/instamap-core-api/: .env  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/instamap-core-api/alembic/: env.py
backend/instamap-core-api/alembic/versions/: 001_initial.py
backend/instamap-core-api/app/: main.py
backend/instamap-core-api/app/api/: deps.py
backend/instamap-core-api/app/api/api_v1/: api.py
backend/instamap-core-api/app/api/api_v1/endpoints/: auth.py  posts.py  users.py
backend/instamap-core-api/app/core/: config.py  security.py
backend/instamap-core-api/app/crud/: __init__.py  base.py  crud_post.py  crud_user.py
backend/instamap-core-api/app/models/: base.py  post.py  user.py
backend/instamap-core-api/app/schemas/: base.py  post.py  user.py
backend/instamap-core-api/scripts/: start.sh
frontend/: package-lock.json  package.json  tailwind.config.mjs
frontend/public/data/: posts.json  users.json
frontend/src/: App.vue  main.ts
frontend/src/assets/: base.scss  components.scss  styles.scss  variables.scss
frontend/src/components/: AppFooter.vue  AppHeader.vue  PostCard.vue
frontend/src/i18n/: index.ts
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts  post.ts  theme.ts
frontend/src/utils/: toast.ts
frontend/src/views/: AuthView.vue  (+5 more)
interface-layout/: auth.html  index.html  map.html  profile.html  script.js  search.html  styles.css
(+30 files in other folders)
